tests/misc/tatomic.nim
discard """
  line: 6
  errormsg: "identifier expected, but found 'keyword atomic'"
"""
var
  atomic: int

echo atomic
